<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layoutDirection="ltr"
    android:minWidth="280dp"
    android:padding="16dp"
    app:cardCornerRadius="28dp"
    app:cardElevation="0dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:text="@string/cat_proxy_subscription_information"
        android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/subscription_details"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginTop="5dp"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOkay"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/primary" />
    </LinearLayout>
</RelativeLayout>