<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/free_trial_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/icClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/free_trial_heading"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icClose" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:padding="6dp"
            android:text="@string/no_ads"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvOfferDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/free_trial_offer_details"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnSubscribeNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutOptions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubscribeNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF9800"
        android:gravity="center"
        android:paddingHorizontal="34dp"
        android:paddingVertical="14dp"
        android:text="@string/subscribe_now"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tvCancelSubscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCancelSubscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/cancel_subscription_summary"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tvFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/free_trial_footer_text"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>